fix: compile and bundle JNI libraries natively, set target to Java 8